{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 90,
  "lineage": "2a60e5a6-2b05-b3b7-a38e-2fb6076ad368",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:security-group/sg-08b7c569dd97b7d3e",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-08b7c569dd97b7d3e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-045e2909063ef9f6d"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Nodes on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-045e2909063ef9f6d"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "monitoring-fraudapi-poc-cluster-20240831085005580600000006",
            "name_prefix": "monitoring-fraudapi-poc-cluster-",
            "owner_id": "767397784250",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "monitoring-fraudapi-poc-cluster"
            },
            "tags_all": {
              "Name": "monitoring-fraudapi-poc-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff61af0053c8014a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:security-group/sg-045e2909063ef9f6d",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045e2909063ef9f6d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0b26858bac3fcc7af"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to Nodegroup all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-08b7c569dd97b7d3e"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08b7c569dd97b7d3e"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08b7c569dd97b7d3e"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08b7c569dd97b7d3e"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08b7c569dd97b7d3e"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08b7c569dd97b7d3e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08b7c569dd97b7d3e"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node all ports/protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "monitoring-fraudapi-poc-node-20240831085005586800000007",
            "name_prefix": "monitoring-fraudapi-poc-node-",
            "owner_id": "767397784250",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "monitoring-fraudapi-poc-node",
              "kubernetes.io/cluster/monitoring-fraudapi-poc": "owned"
            },
            "tags_all": {
              "Name": "monitoring-fraudapi-poc-node",
              "kubernetes.io/cluster/monitoring-fraudapi-poc": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff61af0053c8014a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2517094002",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08b7c569dd97b7d3e",
            "security_group_rule_id": "sgr-0a3091485fe2407c8",
            "self": false,
            "source_security_group_id": "sg-045e2909063ef9f6d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral_ports_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Nodes on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-588384324",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08b7c569dd97b7d3e",
            "security_group_rule_id": "sgr-036ddaf361bc484cc",
            "self": false,
            "source_security_group_id": "sg-045e2909063ef9f6d",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2856476261",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-045e2909063ef9f6d",
            "security_group_rule_id": "sgr-08260f89012c049ac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2908977054",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-045e2909063ef9f6d",
            "security_group_rule_id": "sgr-00e83914ba98c3826",
            "self": false,
            "source_security_group_id": "sg-08b7c569dd97b7d3e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3846046284",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-045e2909063ef9f6d",
            "security_group_rule_id": "sgr-033ac9bc5bf1fd442",
            "self": false,
            "source_security_group_id": "sg-08b7c569dd97b7d3e",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-746350042",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-045e2909063ef9f6d",
            "security_group_rule_id": "sgr-0577879b72dc9cbf4",
            "self": false,
            "source_security_group_id": "sg-08b7c569dd97b7d3e",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1059084795",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-045e2909063ef9f6d",
            "security_group_rule_id": "sgr-09bc01629ebd0f1b0",
            "self": false,
            "source_security_group_id": "sg-08b7c569dd97b7d3e",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1535207984",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-045e2909063ef9f6d",
            "security_group_rule_id": "sgr-0417a5d005d7787c4",
            "self": false,
            "source_security_group_id": "sg-08b7c569dd97b7d3e",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3443113905",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-045e2909063ef9f6d",
            "security_group_rule_id": "sgr-0462e2beeb7d556f3",
            "self": false,
            "source_security_group_id": "sg-08b7c569dd97b7d3e",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_to_node_all_traffic",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to Nodegroup all traffic",
            "from_port": 0,
            "id": "sgrule-3942832398",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-045e2909063ef9f6d",
            "security_group_rule_id": "sgr-02dbaee6c6ed38e46",
            "self": false,
            "source_security_group_id": "sg-08b7c569dd97b7d3e",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-4021596470",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-045e2909063ef9f6d",
            "security_group_rule_id": "sgr-06c1d5b170404ab7c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-449295899",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-045e2909063ef9f6d",
            "security_group_rule_id": "sgr-0a46ea0b26f7e2b9e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1399851779",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-045e2909063ef9f6d",
            "security_group_rule_id": "sgr-09c6f37ed2567418b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4147095788",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-045e2909063ef9f6d",
            "security_group_rule_id": "sgr-098949ff46e68ac37",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:network-acl/acl-04a7f78e90f798d09",
            "default_network_acl_id": "acl-04a7f78e90f798d09",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04a7f78e90f798d09",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767397784250",
            "subnet_ids": [
              "subnet-0298a02520a1ee542",
              "subnet-04d21671a6a13da9a",
              "subnet-060d379989a22f2a5",
              "subnet-065c17cea115f4215",
              "subnet-08897525753ac1c61",
              "subnet-0af8232fa9b565256"
            ],
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-default",
              "TeamName": "cloudrockers"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-default",
              "TeamName": "cloudrockers"
            },
            "vpc_id": "vpc-0ff61af0053c8014a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:route-table/rtb-07d6e6953e09af4ba",
            "default_route_table_id": "rtb-07d6e6953e09af4ba",
            "id": "rtb-07d6e6953e09af4ba",
            "owner_id": "767397784250",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-default",
              "TeamName": "cloudrockers"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-default",
              "TeamName": "cloudrockers"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ff61af0053c8014a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:security-group/sg-063d85dfba3690d60",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-063d85dfba3690d60",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767397784250",
            "revoke_rules_on_delete": false,
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-default",
              "TeamName": "cloudrockers"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-default",
              "TeamName": "cloudrockers"
            },
            "vpc_id": "vpc-0ff61af0053c8014a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b4fe4b16362048a",
            "arn": "arn:aws:ec2:ap-south-1:767397784250:elastic-ip/eipalloc-01b4fe4b16362048a",
            "association_id": "eipassoc-069322eeeb714e3f6",
            "domain": "vpc",
            "id": "eipalloc-01b4fe4b16362048a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-08f7fa4706674f9dc",
            "private_dns": "ip-10-107-160-132.ap-south-1.compute.internal",
            "private_ip": "10.107.160.132",
            "public_dns": "ec2-13-201-17-85.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.17.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-ap-south-1a",
              "TeamName": "cloudrockers"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-ap-south-1a",
              "TeamName": "cloudrockers"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:internet-gateway/igw-0643b42d96b41d19d",
            "id": "igw-0643b42d96b41d19d",
            "owner_id": "767397784250",
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc",
              "TeamName": "cloudrockers"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc",
              "TeamName": "cloudrockers"
            },
            "vpc_id": "vpc-0ff61af0053c8014a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b4fe4b16362048a",
            "association_id": "eipassoc-069322eeeb714e3f6",
            "connectivity_type": "public",
            "id": "nat-0cfd2b5cc826055d8",
            "network_interface_id": "eni-08f7fa4706674f9dc",
            "private_ip": "10.107.160.132",
            "public_ip": "13.201.17.85",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08897525753ac1c61",
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-ap-south-1a",
              "TeamName": "cloudrockers"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-ap-south-1a",
              "TeamName": "cloudrockers"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d3e6d91f5a0035161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cfd2b5cc826055d8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d3e6d91f5a003516",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0643b42d96b41d19d",
            "id": "r-rtb-09458f1fda526f8ee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09458f1fda526f8ee",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:route-table/rtb-0048e2ecd2d9a7478",
            "id": "rtb-0048e2ecd2d9a7478",
            "owner_id": "767397784250",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-db",
              "TeamName": "cloudrockers"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-db",
              "TeamName": "cloudrockers"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff61af0053c8014a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:route-table/rtb-0d3e6d91f5a003516",
            "id": "rtb-0d3e6d91f5a003516",
            "owner_id": "767397784250",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cfd2b5cc826055d8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-private",
              "TeamName": "cloudrockers"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-private",
              "TeamName": "cloudrockers"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff61af0053c8014a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:route-table/rtb-09458f1fda526f8ee",
            "id": "rtb-09458f1fda526f8ee",
            "owner_id": "767397784250",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0643b42d96b41d19d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-public",
              "TeamName": "cloudrockers"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-public",
              "TeamName": "cloudrockers"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff61af0053c8014a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9f6379f32f4dc73",
            "route_table_id": "rtb-0048e2ecd2d9a7478",
            "subnet_id": "subnet-060d379989a22f2a5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdf5cf98d171171c",
            "route_table_id": "rtb-0048e2ecd2d9a7478",
            "subnet_id": "subnet-0af8232fa9b565256"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0510e2637f372e2a7",
            "route_table_id": "rtb-0d3e6d91f5a003516",
            "subnet_id": "subnet-04d21671a6a13da9a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d566849c626b028",
            "route_table_id": "rtb-0d3e6d91f5a003516",
            "subnet_id": "subnet-065c17cea115f4215"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0964d6e78a0f07e3f",
            "route_table_id": "rtb-09458f1fda526f8ee",
            "subnet_id": "subnet-08897525753ac1c61"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08351d1e859e83ca4",
            "route_table_id": "rtb-09458f1fda526f8ee",
            "subnet_id": "subnet-0298a02520a1ee542"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:subnet/subnet-060d379989a22f2a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.107.160.192/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060d379989a22f2a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397784250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-db-ap-south-1a",
              "TeamName": "cloudrockers"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-db-ap-south-1a",
              "TeamName": "cloudrockers"
            },
            "vpc_id": "vpc-0ff61af0053c8014a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:subnet/subnet-0af8232fa9b565256",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.107.160.224/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af8232fa9b565256",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397784250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-db-ap-south-1b",
              "TeamName": "cloudrockers"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-db-ap-south-1b",
              "TeamName": "cloudrockers"
            },
            "vpc_id": "vpc-0ff61af0053c8014a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:subnet/subnet-04d21671a6a13da9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.107.160.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d21671a6a13da9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397784250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-private-ap-south-1a",
              "TeamName": "cloudrockers",
              "kubernetes.io/cluster/monitoring-fraudapi-poc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-private-ap-south-1a",
              "TeamName": "cloudrockers",
              "kubernetes.io/cluster/monitoring-fraudapi-poc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ff61af0053c8014a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:subnet/subnet-065c17cea115f4215",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.107.160.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065c17cea115f4215",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397784250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-private-ap-south-1b",
              "TeamName": "cloudrockers",
              "kubernetes.io/cluster/monitoring-fraudapi-poc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-private-ap-south-1b",
              "TeamName": "cloudrockers",
              "kubernetes.io/cluster/monitoring-fraudapi-poc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ff61af0053c8014a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:subnet/subnet-08897525753ac1c61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.107.160.128/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08897525753ac1c61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397784250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-public-ap-south-1a",
              "TeamName": "cloudrockers",
              "kubernetes.io/cluster/monitoring-fraudapi-poc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-public-ap-south-1a",
              "TeamName": "cloudrockers",
              "kubernetes.io/cluster/monitoring-fraudapi-poc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ff61af0053c8014a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:subnet/subnet-0298a02520a1ee542",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.107.160.160/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0298a02520a1ee542",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397784250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-public-ap-south-1b",
              "TeamName": "cloudrockers",
              "kubernetes.io/cluster/monitoring-fraudapi-poc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc-public-ap-south-1b",
              "TeamName": "cloudrockers",
              "kubernetes.io/cluster/monitoring-fraudapi-poc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ff61af0053c8014a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397784250:vpc/vpc-0ff61af0053c8014a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.107.160.0/24",
            "default_network_acl_id": "acl-04a7f78e90f798d09",
            "default_route_table_id": "rtb-07d6e6953e09af4ba",
            "default_security_group_id": "sg-063d85dfba3690d60",
            "dhcp_options_id": "dopt-0ef091ecde8f6235b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff61af0053c8014a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d6e6953e09af4ba",
            "owner_id": "767397784250",
            "tags": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc",
              "TeamName": "cloudrockers"
            },
            "tags_all": {
              "Businessunit": "monitoring",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "monitoring-fraudapi-vpc-poc",
              "TeamName": "cloudrockers"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}